# LabsPython

./: main.py  test_rk2_refactored.py  ИУ5-34Б_Потапов_Лаб6.docx  ИУ5-34Б_Потапов_Лаба1.docx  ИУ5-34Б_Потапов_РК1-2.docx
cloud_backup_cli/: Cargo.toml  Отчет Данька.docx
cloud_backup_cli/config/: default.toml
cloud_backup_cli/src/: backup.rs  config.rs  main.rs  oauth.rs  uploader.rs
lab2/: main.py  ИУ5-34Б_Потапов_Лаба2.docx
lab2/lab_python_oop/: circle.py  figure.py  rectangle.py  square.py
lab3/: field.py  sort.py  ИУ5-34Б_Потапов_Лаба3-4.docx
lab3_4/: cm_timer.py  gen_random.py  process_data.py  unique.py
lab5/: main.py  ИУ5-34Б_Потапов_Лаб5-2.docx  ИУ5-34Б_Потапов_Лаб5.docx
lab6/: config.py  handlers.py  main.py  movie_api.py
rk1/: main.py
rk2/: rk2_refactored.py  ИУ5-34Б_Потапов_РК2.docx
