[package]
name = "cloud_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
zip = "0.6.6"
walkdir = "2.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde_json = "1.0"
urlencoding = "2.1"
